corrected errors for lesson 15

--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -36,13 +36,13 @@
                     <div class="header__btn">
                         <a
                             href="#"
-                            class="button button--purple active"
+                            class="button button--border active"
                             id="purpleButton">
                             Login
                         </a>
                         <a
                             href="#"
-                            class="button button--purple button--border"
+                            class="button button--border"
                             id="borderButton">
                             Sign Up
                         </a>
@@ -54,7 +54,7 @@
                     <h1 class="sticky-categories">Categories For Men</h1>
                     <div class="categories">
                         <div class="categories__cart cart">
-                            <div class="cart__container-image">
+                            <div class="cart__conttainer-image">
                                 <div class="cart__image">
                                     <img
                                         src="img/main/carts/image-1.webp"
@@ -67,7 +67,7 @@
                             </div>
                         </div>
                         <div class="categories__cart cart">
-                            <div class="cart__container-image">
+                            <div class="cart__conttainer-image">
                                 <div class="cart__image">
                                     <img
                                         src="img/main/carts/image-2.webp"
@@ -75,12 +75,12 @@
                                 </div>
                             </div>
                             <div class="cart__info">
-                                <div class="cart__name">Shirts</div>
+                                <div class="cart__name">Printed T-Shirts</div>
                                 <div class="cart__text">Explore Now!</div>
                             </div>
                         </div>
                         <div class="categories__cart cart">
-                            <div class="cart__container-image">
+                            <div class="cart__conttainer-image">
                                 <div class="cart__image">
                                     <img
                                         src="img/main/carts/image-3.webp"
@@ -88,12 +88,12 @@
                                 </div>
                             </div>
                             <div class="cart__info">
-                                <div class="cart__name">Shirts</div>
+                                <div class="cart__name">Plain T-Shirt</div>
                                 <div class="cart__text">Explore Now!</div>
                             </div>
                         </div>
                         <div class="categories__cart cart">
-                            <div class="cart__container-image">
+                            <div class="cart__conttainer-image">
                                 <div class="cart__image">
                                     <img
                                         src="img/main/carts/image-4.webp"
@@ -101,12 +101,12 @@
                                 </div>
                             </div>
                             <div class="cart__info">
-                                <div class="cart__name">Shirts</div>
+                                <div class="cart__name">Polo T-Shirt</div>
                                 <div class="cart__text">Explore Now!</div>
                             </div>
                         </div>
                         <div class="categories__cart cart">
-                            <div class="cart__container-image">
+                            <div class="cart__conttainer-image">
                                 <div class="cart__image">
                                     <img
                                         src="img/main/carts/image-5.webp"
@@ -114,12 +114,12 @@
                                 </div>
                             </div>
                             <div class="cart__info">
-                                <div class="cart__name">Shirts</div>
+                                <div class="cart__name">Hoodies & Sweetshirt</div>
                                 <div class="cart__text">Explore Now!</div>
                             </div>
                         </div>
                         <div class="categories__cart cart">
-                            <div class="cart__container-image">
+                            <div class="cart__conttainer-image">
                                 <div class="cart__image">
                                     <img
                                         src="img/main/carts/image-6.webp"
@@ -127,12 +127,12 @@
                                 </div>
                             </div>
                             <div class="cart__info">
-                                <div class="cart__name">Shirts</div>
+                                <div class="cart__name">Jeans</div>
                                 <div class="cart__text">Explore Now!</div>
                             </div>
                         </div>
                         <div class="categories__cart cart">
-                            <div class="cart__container-image">
+                            <div class="cart__conttainer-image">
                                 <div class="cart__image">
                                     <img
                                         src="img/main/carts/image-7.webp"
@@ -140,12 +140,12 @@
                                 </div>
                             </div>
                             <div class="cart__info">
-                                <div class="cart__name">Shirts</div>
+                                <div class="cart__name">Activewear</div>
                                 <div class="cart__text">Explore Now!</div>
                             </div>
                         </div>
                         <div class="categories__cart cart">
-                            <div class="cart__container-image">
+                            <div class="cart__conttainer-image">
                                 <div class="cart__image">
                                     <img
                                         src="img/main/carts/image-8.webp"
@@ -153,7 +153,7 @@
                                 </div>
                             </div>
                             <div class="cart__info">
-                                <div class="cart__name">Shirts</div>
+                                <div class="cart__name">Boxers</div>
                                 <div class="cart__text">Explore Now!</div>
                             </div>
                         </div>
